# Travelist-

./: .gitignore  README.md  __mem0_engine_test.py  alembic.ini  docker-compose.yml  pyproject.toml  pytest_out.txt  requirements.txt  stage3_manual.db
.github/workflows/: ci.yml
.trae/documents/: 修复中文乱码问题.md
_docs/Phase0/: Code.md  Review.md  Spec.md  Tests.md
_docs/Phase1/: Code.md  Review.md  Spec.md  Tests.md
_docs/Phase2/: Code.md  Review.md  Spec.md  Tests.md
_docs/Phase3/: Code.md  Review.md  Spec.md  Tests.md
_docs/Phase4/: Code.md  Review.md  Spec.md  Tests.md
_docs/Phase5/: Code.md  Review.md  Spec.md  Tests.md
_docs/Phase6/: Code.md  Review.md  Spec.md  Tests.md
_docs/Phase7/: Code.md  Review.md  Spec.md  Tests.md
_docs/Phase8/: Code.md  Review.md  Spec.md  Tests.md
_docs/Phase8/experiments/: deep_sync_response.json  fast_response.json  input.json
_docs/Phase9/: Spec.md
_docs/_design/: APP设计文档.md  原始设计草案.txt  后端设计文档.md  技术选型文档.md  数据库设计文档.md  阶段开发文档.md  阶段开发文档（0-3）.md  阶段开发文档（4-11）.md
_docs/_remediation/Stage8_Precheck/: 00_整改总览.md  01_P0-1_CI.md  02_P0-2_Release.md  03_P1-1_Geocode.md  04_P1-2_Metrics.md  05_P2-3_AdminSQL.md  06_P2-1_Data.md  07_P2-2_Smoke.md  验收报告.md
_docs/_reviews/Stage9_Precheck/: Stage9_Entry_Assessment_2025-12-14.md
_docs/data/: poi_reverse_geocode_enrichment.md
backend/: Dockerfile
backend/app/admin/: __init__.py  (+4 more)
backend/mem0/: __init__.py
backend/migrations/: env.py  script.py.mako
backend/prod_tests/: __init__.py  conftest.py  test_prod_smoke.py
backend/tests/: conftest.py  test_admin.py  test_admin_ai_tasks.py  test_admin_plan.py  test_agents_tools.py  test_ai.py  test_ai_api.py  test_ai_chat_service_ext.py  test_assistant_poi.py  test_assistant_service.py  test_assistant_weather_relative_date.py  test_health.py  test_itinerary_tools.py  test_memory_multi_scope.py  test_plan_api.py  test_poi_api.py  test_poi_service.py  test_response_formatter_memory_draft.py  test_trips.py
backend/travelist_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: seed_stage2_data.py  smoke_stage7.py  test_connections.py
toolkit/: __init__.py  area_weather.py  config_utils.py  current_time.py  deep_extract.py  deep_search.py  fast_search.py  logging_config.py  path_navigate.py  weather_search.py
toolkit/tool_dependency/: adcoder.json
(+141 files in other folders)
